# itmg_delete_meals

./: .gitignore  LICENSE  README.md  delete_meals.ipynb  pyproject.toml
src/: all_delete.py
