[tool.poetry]
name = "shokudo"
version = "0.1.0"
description = ""
authors = ["kkstn <kkstn708@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.25.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
isort = "^5.12.0"
black = "^23.7.0"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
